--- a/src/style/All.scss
+++ b/src/style/All.scss
@@ -1,23 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 .layout{
     display: grid;
     gap: 1em;
     grid-template-columns: repeat(4, 2fr);
     grid-auto-rows: minmax(200px,auto);
 
-    // .box{
-    //     padding: .8em;
-    // }
-
     .box1{
         grid-column: span 2;
         grid-row: span 2;
+
+        .font-change{
+            font-family: "Quicksand", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 500;
+            font-style: normal;
+
+        }
+        .name{
+            color: #2E3192;
+            background-image: -webkit-linear-gradient(0deg, #3338b8 20%, #25c1fa 68%);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            transition: all .45s ease-in-out;
+        }
+        .name:hover{
+           font-size: 7em;
+        }
     }
     .box2{
         padding: 0;
         grid-column: span 2;
     }
     .box3{
-        background-color: #eefbff;
         grid-column: span 1;
     }
 }
