--- a/src/style/All.scss
+++ b/src/style/All.scss
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
+// Variables
+$font-stack: "Quicksand", sans-serif;
+
 .layout{
     display: grid;
     gap: 1em;
@@ -10,7 +14,7 @@
         grid-row: span 2;
 
         .font-change{
-            font-family: "Quicksand", sans-serif;
+            font-family: $font-stack;
             font-optical-sizing: auto;
             font-weight: 500;
             font-style: normal;
@@ -25,7 +29,7 @@
             transition: all .45s ease-in-out;
         }
         .name:hover{
-           font-size: 7em;
+           font-size: 6.8em;
         }
     }
     .box2{
@@ -36,3 +40,17 @@
         grid-column: span 1;
     }
 }
+
+@media (max-width: 768px) {
+        .layout {
+            display: block;
+            
+            .box{
+                margin: 1em 0;
+            }
+        }
+
+        .name {
+            font-size: 3em; /* Adjust the font size for smaller screens */
+        }
+    }
