--- a/src/style/All.scss
+++ b/src/style/All.scss
@@ -48,9 +48,13 @@ $font-stack: "Quicksand", sans-serif;
             .box{
                 margin: 1em 0;
             }
-        }
-
-        .name {
-            font-size: 3em; /* Adjust the font size for smaller screens */
+            .box1{
+                .name{
+                    font-size: 3em;
+                }
+                .name:hover{
+                    font-size: 3.3em;
+                }
+            }
         }
     }
