--- a/src/style/All.scss
+++ b/src/style/All.scss
@@ -18,7 +18,6 @@ $font-stack: "Quicksand", sans-serif;
             font-optical-sizing: auto;
             font-weight: 500;
             font-style: normal;
-
         }
         .name{
             color: #2E3192;
@@ -38,6 +37,9 @@ $font-stack: "Quicksand", sans-serif;
     }
     .box3{
         grid-column: span 1;
+    }
+    .box4{
+        grid-column: span 2;
     }
 }
 
