--- a/src/style/All.scss
+++ b/src/style/All.scss
@@ -9,6 +9,7 @@ $font-stack: "Quicksand", sans-serif;
     grid-template-columns: repeat(4, 2fr);
     grid-auto-rows: minmax(200px,auto);
     padding: 5em;
+    border-top: solid;
 
     .box{
         border-radius: 1.25rem;
@@ -18,23 +19,44 @@ $font-stack: "Quicksand", sans-serif;
     .box1{
         grid-column: span 2;
         grid-row: span 2;
+        
+        .aboutme{
 
-        .font-change{
-            font-family: $font-stack;
-            font-optical-sizing: auto;
-            font-weight: 500;
-            font-style: normal;
-        }
-        .name{
-            color: #2E3192;
-            background-image: -webkit-linear-gradient(0deg, #3338b8 20%, #25c1fa 68%);
-            background-clip: text;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            transition: all .45s ease-in-out;
-        }
-        .name:hover{
-           font-size: 6.8em;
+            .font-change{
+                font-family: $font-stack;
+                font-optical-sizing: auto;
+                font-weight: 500;
+                font-style: normal;
+            }
+
+            .name{
+                color: #2E3192;
+                background-image: -webkit-linear-gradient(0deg, #3338b8 20%, #25c1fa 68%);
+                background-clip: text;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                overflow: hidden; /* Ensures the content is not revealed until the animation */
+                border-right: .019em solid #000000; /* The typwriter cursor */
+                white-space: nowrap; /* Keeps the content on a single line */
+                letter-spacing: .4rem;
+                animation: 
+                    typing 3s steps(40, end),
+                    blink-caret .75s step-end infinite;
+                transition: all .45s ease-in-out;
+            }
+
+            @keyframes typing {
+                from { width: 0; }
+                to { width: 75%; }
+            }
+
+            @keyframes blink-caret {
+                from, to { border-color: transparent }
+                50% { border-color: #000000; }
+            }
+            .name:hover{
+                font-size: 5.2em;
+            }
         }
     }
     .box2{
@@ -59,7 +81,20 @@ $font-stack: "Quicksand", sans-serif;
             }
             .box1{
                 .name{
-                    font-size: 3em;
+                    font-size: 2.5em;
+                    animation: 
+                    typing 3s steps(40, end),
+                    blink-caret .75s step-end infinite;
+                    transition: all .45s ease-in-out;
+                    letter-spacing: normal;
+                }
+                @keyframes typing {
+                    from { width: 0; }
+                    to { width: 100%; }
+                }
+                @keyframes blink-caret {
+                    from, to { border-color: transparent }
+                    50% { border-color: #000000; }
                 }
                 .name:hover{
                     font-size: 3.3em;
