--- a/src/style/Media.scss
+++ b/src/style/Media.scss
@@ -19,6 +19,7 @@
     }
     .insta{
         grid-column: span 1;
+        background: linear-gradient(45deg, #405De6, #5851DB, #833AB4, #C13584, #E1306C,#FD1D1D);
     }
 }
 
