--- a/src/style/skill.css
+++ b/src/style/skill.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    box-shadow: 0 7px 8px 1px rgba(0, 0, 0, 0.2);
 }
 
 .scroller[data-animated="true"] {
@@ -13,7 +14,7 @@
 .scroller[data-animated="true"] .scroller__inner {
     width: fit-content;
     flex-wrap: nowrap;
-    animation: scroll 10s linear infinite;
+    animation: scroll 15s linear infinite;
 }
 
 @keyframes scroll {
