--- a/src/style/Media.scss
+++ b/src/style/Media.scss
@@ -30,6 +30,7 @@ $font-stack: "Quicksand", sans-serif;
     .insta{
         grid-column: span 1;
         background: linear-gradient(45deg, #405De6, #5851DB, #833AB4, #C13584, #E1306C,#FD1D1D);
+        border-radius: 1.5rem;
     }
     .box1{
         grid-column: span 2;
